inf402_project_implementation/myanalyzer.output
Terminals unused in grammar

    STRING


Grammar

    0 $accept: input $end

    1 input: result

    2 func_body: ε
    3          | var_assign func_body
    4          | conditions func_body
    5          | func_decl func_body

    6 main_func: KEYWORD_DEF KEYWORD_MAIN '(' ')' ':' func_body KEYWORD_ENDDEF ';'

    7 func_decl: KEYWORD_DEF ID '(' parameters ')' '-' GREATERTHAN_OP type ':' func_body KEYWORD_ENDDEF ';'

    8 parameters: ε
    9           | ID ':' type
   10           | ID '[' ']' ':' type
   11           | ID ':' type ',' parameters

   12 call_func: ID '(' func_input ')'

   13 func_input: ε
   14           | expr ',' func_input
   15           | expr

   16 var_assign: ID ':' type ';'
   17           | ID ',' var_assign
   18           | ID '=' expr ':' type ';'
   19           | ID '[' expr ']' ':' type ';'
   20           | KEYWORD_CONST var_assign

   21 var_update: ID '=' expr ';'
   22           | ID '[' expr ']' '=' expr ';'

   23 result: ε
   24       | var_assign result
   25       | func_decl result
   26       | main_func result
   27       | comp result

   28 conditions: var_update
   29           | call_func ';'
   30           | complex_array
   31           | ID ':' '=' '[' expr KEYWORD_FOR expr ':' DECIMAL ']' ':' type ';'
   32           | ID '=' '[' expr KEYWORD_FOR expr ':' expr ']' ':' type ';'
   33           | KEYWORD_IF '(' expr ')' ':' statements KEYWORD_ENDIF ';'
   34           | KEYWORD_IF '(' expr ')' ':' statements KEYWORD_ELSE ':' statements KEYWORD_ENDIF ';'
   35           | KEYWORD_FOR ID KEYWORD_IN '[' expr ':' expr '-' expr ']' ':' statements KEYWORD_ENDFOR ';'
   36           | KEYWORD_FOR ID KEYWORD_IN '[' expr ':' expr '+' expr ']' ':' statements KEYWORD_ENDFOR ';'
   37           | KEYWORD_FOR ID KEYWORD_IN '[' expr ':' expr '-' expr ':' expr ']' ':' statements KEYWORD_ENDFOR ';'
   38           | KEYWORD_FOR ID KEYWORD_IN '[' expr ':' expr '+' expr ':' expr ']' ':' statements KEYWORD_ENDFOR ';'
   39           | KEYWORD_WHILE '(' expr ')' ':' statements KEYWORD_ENDWHILE ';'
   40           | KEYWORD_BREAK ';'
   41           | KEYWORD_CONTINUE ';'
   42           | KEYWORD_RETURN ';'
   43           | KEYWORD_RETURN expr ';'

   44 complex_array: ID ':' '=' '[' expr KEYWORD_FOR expr ':' type KEYWORD_IN expr KEYWORD_OF expr ']' ':' type ';'

   45 more_conds: conditions
   46           | conditions more_conds

   47 statements: more_conds

   48 comp: KEYWORD_COMP ID ':' comp_body KEYWORD_ENDCOMP ';'

   49 comp_body: ε
   50          | comp_var_decl comp_body
   51          | func_decl comp_body

   52 comp_var_decl: HASHTAG_OP ID ':' type ';'
   53              | HASHTAG_OP ID ',' comp_var_decl

   54 expr: ID
   55     | DECIMAL
   56     | REAL
   57     | NUMBER
   58     | call_func
   59     | BOOLEAN_TRUE
   60     | BOOLEAN_FALSE
   61     | '+' expr
   62     | '-' expr
   63     | expr POWER_OP expr
   64     | expr '*' expr
   65     | expr '/' expr
   66     | expr '%' expr
   67     | expr '+' expr
   68     | expr '-' expr
   69     | '(' expr ')'
   70     | expr EQUAL_OP expr
   71     | expr NOTEQUAL_OP expr
   72     | expr LESSTHAN_OP expr
   73     | expr GREATERTHAN_OP expr
   74     | expr LESSTHANEQUAL_OP expr
   75     | expr GREATERTHANEQUAL_OP expr
   76     | expr KEYWORD_AND expr
   77     | expr KEYWORD_OR expr
   78     | expr KEYWORD_NOT expr
   79     | expr PLUSASSIGN_OP expr
   80     | expr MINUSASSIGN_OP expr
   81     | expr MULTASSIGN_OP expr
   82     | expr DIVASSIGN_OP expr
   83     | expr MODASSIGN_OP expr
   84     | '[' expr ']'
   85     | ';'

   86 type: KEYWORD_SCALAR
   87     | KEYWORD_INTEGER
   88     | KEYWORD_STR
   89     | KEYWORD_BOOLEAN


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 66
    '(' (40) 6 7 12 33 34 39 69
    ')' (41) 6 7 12 33 34 39 69
    '*' (42) 64
    '+' (43) 36 38 61 67
    ',' (44) 11 14 17 53
    '-' (45) 7 35 37 62 68
    '/' (47) 65
    ':' (58) 6 7 9 10 11 16 18 19 31 32 33 34 35 36 37 38 39 44 48 52
    ';' (59) 6 7 16 18 19 21 22 29 31 32 33 34 35 36 37 38 39 40 41 42 43 44 48 52 85
    '=' (61) 18 21 22 31 32 44
    '[' (91) 10 19 22 31 32 35 36 37 38 44 84
    ']' (93) 10 19 22 31 32 35 36 37 38 44 84
    error (256)
    STRING <str> (258)
    ID <str> (259) 7 9 10 11 12 16 17 18 19 21 22 31 32 35 36 37 38 44 48 52 53 54
    NUMBER <str> (260) 57
    DECIMAL <str> (261) 31 55
    REAL <str> (262) 56
    KEYWORD_INTEGER (263) 87
    KEYWORD_SCALAR (264) 86
    KEYWORD_STR (265) 88
    KEYWORD_BOOLEAN (266) 89
    BOOLEAN_TRUE (267) 59
    BOOLEAN_FALSE (268) 60
    KEYWORD_CONST (269) 20
    KEYWORD_IF (270) 33 34
    KEYWORD_ELSE (271) 34
    KEYWORD_ENDIF (272) 33 34
    KEYWORD_FOR (273) 31 32 35 36 37 38 44
    KEYWORD_IN (274) 35 36 37 38 44
    KEYWORD_ENDFOR (275) 35 36 37 38
    KEYWORD_WHILE (276) 39
    KEYWORD_ENDWHILE (277) 39
    KEYWORD_BREAK (278) 40
    KEYWORD_CONTINUE (279) 41
    KEYWORD_DEF (280) 6 7
    KEYWORD_ENDDEF (281) 6 7
    KEYWORD_MAIN (282) 6
    KEYWORD_RETURN (283) 42 43
    KEYWORD_COMP (284) 48
    KEYWORD_ENDCOMP (285) 48
    KEYWORD_OF (286) 44
    POWER_OP (287) 63
    EQUAL_OP (288) 70
    NOTEQUAL_OP (289) 71
    LESSTHAN_OP (290) 72
    LESSTHANEQUAL_OP (291) 74
    GREATERTHAN_OP (292) 7 73
    GREATERTHANEQUAL_OP (293) 75
    PLUSASSIGN_OP (294) 79
    MINUSASSIGN_OP (295) 80
    MULTASSIGN_OP (296) 81
    DIVASSIGN_OP (297) 82
    MODASSIGN_OP (298) 83
    HASHTAG_OP (299) 52 53
    KEYWORD_NOT (300) 78
    KEYWORD_AND (301) 76
    KEYWORD_OR (302) 77


Nonterminals, with rules where they appear

    $accept (61)
        on left: 0
    input (62)
        on left: 1
        on right: 0
    func_body <str> (63)
        on left: 2 3 4 5
        on right: 3 4 5 6 7
    main_func <str> (64)
        on left: 6
        on right: 26
    func_decl <str> (65)
        on left: 7
        on right: 5 25 51
    parameters <str> (66)
        on left: 8 9 10 11
        on right: 7 11
    call_func <str> (67)
        on left: 12
        on right: 29 58
    func_input <str> (68)
        on left: 13 14 15
        on right: 12 14
    var_assign <str> (69)
        on left: 16 17 18 19 20
        on right: 3 17 20 24
    var_update <str> (70)
        on left: 21 22
        on right: 28
    result <str> (71)
        on left: 23 24 25 26 27
        on right: 1 24 25 26 27
    conditions <str> (72)
        on left: 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43
        on right: 4 45 46
    complex_array <str> (73)
        on left: 44
        on right: 30
    more_conds <str> (74)
        on left: 45 46
        on right: 46 47
    statements <str> (75)
        on left: 47
        on right: 33 34 35 36 37 38 39
    comp <str> (76)
        on left: 48
        on right: 27
    comp_body <str> (77)
        on left: 49 50 51
        on right: 48 50 51
    comp_var_decl <str> (78)
        on left: 52 53
        on right: 50 53
    expr <str> (79)
        on left: 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85
        on right: 14 15 18 19 21 22 31 32 33 34 35 36 37 38 39 43 44 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84
    type <str> (80)
        on left: 86 87 88 89
        on right: 7 9 10 11 16 18 19 31 32 44 52


State 0

    0 $accept: • input $end
    1 input: • result
    6 main_func: • KEYWORD_DEF KEYWORD_MAIN '(' ')' ':' func_body KEYWORD_ENDDEF ';'
    7 func_decl: • KEYWORD_DEF ID '(' parameters ')' '-' GREATERTHAN_OP type ':' func_body KEYWORD_ENDDEF ';'
   16 var_assign: • ID ':' type ';'
   17           | • ID ',' var_assign
   18           | • ID '=' expr ':' type ';'
   19           | • ID '[' expr ']' ':' type ';'
   20           | • KEYWORD_CONST var_assign
   23 result: ε •  [$end]
   24       | • var_assign result
   25       | • func_decl result
   26       | • main_func result
   27       | • comp result
   48 comp: • KEYWORD_COMP ID ':' comp_body KEYWORD_ENDCOMP ';'

    ID             shift, and go to state 1
    KEYWORD_CONST  shift, and go to state 2
    KEYWORD_DEF    shift, and go to state 3
    KEYWORD_COMP   shift, and go to state 4

    $default  reduce using rule 23 (result)

    input       go to state 5
    main_func   go to state 6
    func_decl   go to state 7
    var_assign  go to state 8
    result      go to state 9
    comp        go to state 10


State 1

   16 var_assign: ID • ':' type ';'
   17           | ID • ',' var_assign
   18           | ID • '=' expr ':' type ';'
   19           | ID • '[' expr ']' ':' type ';'

    ':'  shift, and go to state 11
    '['  shift, and go to state 12
    ','  shift, and go to state 13
    '='  shift, and go to state 14


State 2

   16 var_assign: • ID ':' type ';'
   17           | • ID ',' var_assign
   18           | • ID '=' expr ':' type ';'
   19           | • ID '[' expr ']' ':' type ';'
   20           | • KEYWORD_CONST var_assign
   20           | KEYWORD_CONST • var_assign

    ID             shift, and go to state 1
    KEYWORD_CONST  shift, and go to state 2

    var_assign  go to state 15


State 3

    6 main_func: KEYWORD_DEF • KEYWORD_MAIN '(' ')' ':' func_body KEYWORD_ENDDEF ';'
    7 func_decl: KEYWORD_DEF • ID '(' parameters ')' '-' GREATERTHAN_OP type ':' func_body KEYWORD_ENDDEF ';'

    ID            shift, and go to state 16
    KEYWORD_MAIN  shift, and go to state 17


State 4

   48 comp: KEYWORD_COMP • ID ':' comp_body KEYWORD_ENDCOMP ';'

    ID  shift, and go to state 18


State 5

    0 $accept: input • $end

    $end  shift, and go to state 19


State 6

    6 main_func: • KEYWORD_DEF KEYWORD_MAIN '(' ')' ':' func_body KEYWORD_ENDDEF ';'
    7 func_decl: • KEYWORD_DEF ID '(' parameters ')' '-' GREATERTHAN_OP type ':' func_body KEYWORD_ENDDEF ';'
   16 var_assign: • ID ':' type ';'
   17           | • ID ',' var_assign
   18           | • ID '=' expr ':' type ';'
   19           | • ID '[' expr ']' ':' type ';'
   20           | • KEYWORD_CONST var_assign
   23 result: ε •  [$end]
   24       | • var_assign result
   25       | • func_decl result
   26       | • main_func result
   26       | main_func • result
   27       | • comp result
   48 comp: • KEYWORD_COMP ID ':' comp_body KEYWORD_ENDCOMP ';'

    ID             shift, and go to state 1
    KEYWORD_CONST  shift, and go to state 2
    KEYWORD_DEF    shift, and go to state 3
    KEYWORD_COMP   shift, and go to state 4

    $default  reduce using rule 23 (result)

    main_func   go to state 6
    func_decl   go to state 7
    var_assign  go to state 8
    result      go to state 20
    comp        go to state 10


State 7

    6 main_func: • KEYWORD_DEF KEYWORD_MAIN '(' ')' ':' func_body KEYWORD_ENDDEF ';'
    7 func_decl: • KEYWORD_DEF ID '(' parameters ')' '-' GREATERTHAN_OP type ':' func_body KEYWORD_ENDDEF ';'
   16 var_assign: • ID ':' type ';'
   17           | • ID ',' var_assign
   18           | • ID '=' expr ':' type ';'
   19           | • ID '[' expr ']' ':' type ';'
   20           | • KEYWORD_CONST var_assign
   23 result: ε •  [$end]
   24       | • var_assign result
   25       | • func_decl result
   25       | func_decl • result
   26       | • main_func result
   27       | • comp result
   48 comp: • KEYWORD_COMP ID ':' comp_body KEYWORD_ENDCOMP ';'

    ID             shift, and go to state 1
    KEYWORD_CONST  shift, and go to state 2
    KEYWORD_DEF    shift, and go to state 3
    KEYWORD_COMP   shift, and go to state 4

    $default  reduce using rule 23 (result)

    main_func   go to state 6
    func_decl   go to state 7
    var_assign  go to state 8
    result      go to state 21
    comp        go to state 10


State 8

    6 main_func: • KEYWORD_DEF KEYWORD_MAIN '(' ')' ':' func_body KEYWORD_ENDDEF ';'
    7 func_decl: • KEYWORD_DEF ID '(' parameters ')' '-' GREATERTHAN_OP type ':' func_body KEYWORD_ENDDEF ';'
   16 var_assign: • ID ':' type ';'
   17           | • ID ',' var_assign
   18           | • ID '=' expr ':' type ';'
   19           | • ID '[' expr ']' ':' type ';'
   20           | • KEYWORD_CONST var_assign
   23 result: ε •  [$end]
   24       | • var_assign result
   24       | var_assign • result
   25       | • func_decl result
   26       | • main_func result
   27       | • comp result
   48 comp: • KEYWORD_COMP ID ':' comp_body KEYWORD_ENDCOMP ';'

    ID             shift, and go to state 1
    KEYWORD_CONST  shift, and go to state 2
    KEYWORD_DEF    shift, and go to state 3
    KEYWORD_COMP   shift, and go to state 4

    $default  reduce using rule 23 (result)

    main_func   go to state 6
    func_decl   go to state 7
    var_assign  go to state 8
    result      go to state 22
    comp        go to state 10


State 9

    1 input: result •

    $default  reduce using rule 1 (input)


State 10

    6 main_func: • KEYWORD_DEF KEYWORD_MAIN '(' ')' ':' func_body KEYWORD_ENDDEF ';'
    7 func_decl: • KEYWORD_DEF ID '(' parameters ')' '-' GREATERTHAN_OP type ':' func_body KEYWORD_ENDDEF ';'
   16 var_assign: • ID ':' type ';'
   17           | • ID ',' var_assign
   18           | • ID '=' expr ':' type ';'
   19           | • ID '[' expr ']' ':' type ';'
   20           | • KEYWORD_CONST var_assign
   23 result: ε •  [$end]
   24       | • var_assign result
   25       | • func_decl result
   26       | • main_func result
   27       | • comp result
   27       | comp • result
   48 comp: • KEYWORD_COMP ID ':' comp_body KEYWORD_ENDCOMP ';'

    ID             shift, and go to state 1
    KEYWORD_CONST  shift, and go to state 2
    KEYWORD_DEF    shift, and go to state 3
    KEYWORD_COMP   shift, and go to state 4

    $default  reduce using rule 23 (result)

    main_func   go to state 6
    func_decl   go to state 7
    var_assign  go to state 8
    result      go to state 23
    comp        go to state 10


State 11

   16 var_assign: ID ':' • type ';'
   86 type: • KEYWORD_SCALAR
   87     | • KEYWORD_INTEGER
   88     | • KEYWORD_STR
   89     | • KEYWORD_BOOLEAN

    KEYWORD_INTEGER  shift, and go to state 24
    KEYWORD_SCALAR   shift, and go to state 25
    KEYWORD_STR      shift, and go to state 26
    KEYWORD_BOOLEAN  shift, and go to state 27

    type  go to state 28


State 12

   12 call_func: • ID '(' func_input ')'
   19 var_assign: ID '[' • expr ']' ':' type ';'
   54 expr: • ID
   55     | • DECIMAL
   56     | • REAL
   57     | • NUMBER
   58     | • call_func
   59     | • BOOLEAN_TRUE
   60     | • BOOLEAN_FALSE
   61     | • '+' expr
   62     | • '-' expr
   63     | • expr POWER_OP expr
   64     | • expr '*' expr
   65     | • expr '/' expr
   66     | • expr '%' expr
   67     | • expr '+' expr
   68     | • expr '-' expr
   69     | • '(' expr ')'
   70     | • expr EQUAL_OP expr
   71     | • expr NOTEQUAL_OP expr
   72     | • expr LESSTHAN_OP expr
   73     | • expr GREATERTHAN_OP expr
   74     | • expr LESSTHANEQUAL_OP expr
   75     | • expr GREATERTHANEQUAL_OP expr
   76     | • expr KEYWORD_AND expr
   77     | • expr KEYWORD_OR expr
   78     | • expr KEYWORD_NOT expr
   79     | • expr PLUSASSIGN_OP expr
   80     | • expr MINUSASSIGN_OP expr
   81     | • expr MULTASSIGN_OP expr
   82     | • expr DIVASSIGN_OP expr
   83     | • expr MODASSIGN_OP expr
   84     | • '[' expr ']'
   85     | • ';'

    ID             shift, and go to state 29
    NUMBER         shift, and go to state 30
    DECIMAL        shift, and go to state 31
    REAL           shift, and go to state 32
    BOOLEAN_TRUE   shift, and go to state 33
    BOOLEAN_FALSE  shift, and go to state 34
    '+'            shift, and go to state 35
    '-'            shift, and go to state 36
    '('            shift, and go to state 37
    ';'            shift, and go to state 38
    '['            shift, and go to state 39

    call_func  go to state 40
    expr       go to state 41


State 13

   16 var_assign: • ID ':' type ';'
   17           | • ID ',' var_assign
   17           | ID ',' • var_assign
   18           | • ID '=' expr ':' type ';'
   19           | • ID '[' expr ']' ':' type ';'
   20           | • KEYWORD_CONST var_assign

    ID             shift, and go to state 1
    KEYWORD_CONST  shift, and go to state 2

    var_assign  go to state 42


State 14

   12 call_func: • ID '(' func_input ')'
   18 var_assign: ID '=' • expr ':' type ';'
   54 expr: • ID
   55     | • DECIMAL
   56     | • REAL
   57     | • NUMBER
   58     | • call_func
   59     | • BOOLEAN_TRUE
   60     | • BOOLEAN_FALSE
   61     | • '+' expr
   62     | • '-' expr
   63     | • expr POWER_OP expr
   64     | • expr '*' expr
   65     | • expr '/' expr
   66     | • expr '%' expr
   67     | • expr '+' expr
   68     | • expr '-' expr
   69     | • '(' expr ')'
   70     | • expr EQUAL_OP expr
   71     | • expr NOTEQUAL_OP expr
   72     | • expr LESSTHAN_OP expr
   73     | • expr GREATERTHAN_OP expr
   74     | • expr LESSTHANEQUAL_OP expr
   75     | • expr GREATERTHANEQUAL_OP expr
   76     | • expr KEYWORD_AND expr
   77     | • expr KEYWORD_OR expr
   78     | • expr KEYWORD_NOT expr
   79     | • expr PLUSASSIGN_OP expr
   80     | • expr MINUSASSIGN_OP expr
   81     | • expr MULTASSIGN_OP expr
   82     | • expr DIVASSIGN_OP expr
   83     | • expr MODASSIGN_OP expr
   84     | • '[' expr ']'
   85     | • ';'

    ID             shift, and go to state 29
    NUMBER         shift, and go to state 30
    DECIMAL        shift, and go to state 31
    REAL           shift, and go to state 32
    BOOLEAN_TRUE   shift, and go to state 33
    BOOLEAN_FALSE  shift, and go to state 34
    '+'            shift, and go to state 35
    '-'            shift, and go to state 36
    '('            shift, and go to state 37
    ';'            shift, and go to state 38
    '['            shift, and go to state 39

    call_func  go to state 40
    expr       go to state 43


State 15

   20 var_assign: KEYWORD_CONST var_assign •

    $default  reduce using rule 20 (var_assign)


State 16

    7 func_decl: KEYWORD_DEF ID • '(' parameters ')' '-' GREATERTHAN_OP type ':' func_body KEYWORD_ENDDEF ';'

    '('  shift, and go to state 44


State 17

    6 main_func: KEYWORD_DEF KEYWORD_MAIN • '(' ')' ':' func_body KEYWORD_ENDDEF ';'

    '('  shift, and go to state 45


State 18

   48 comp: KEYWORD_COMP ID • ':' comp_body KEYWORD_ENDCOMP ';'

    ':'  shift, and go to state 46


State 19

    0 $accept: input $end •

    $default  accept


State 20

   26 result: main_func result •

    $default  reduce using rule 26 (result)


State 21

   25 result: func_decl result •

    $default  reduce using rule 25 (result)


State 22

   24 result: var_assign result •

    $default  reduce using rule 24 (result)


State 23

   27 result: comp result •

    $default  reduce using rule 27 (result)


State 24

   87 type: KEYWORD_INTEGER •

    $default  reduce using rule 87 (type)


State 25

   86 type: KEYWORD_SCALAR •

    $default  reduce using rule 86 (type)


State 26

   88 type: KEYWORD_STR •

    $default  reduce using rule 88 (type)


State 27

   89 type: KEYWORD_BOOLEAN •

    $default  reduce using rule 89 (type)


State 28

   16 var_assign: ID ':' type • ';'

    ';'  shift, and go to state 47


State 29

   12 call_func: ID • '(' func_input ')'
   54 expr: ID •  [KEYWORD_FOR, KEYWORD_OF, POWER_OP, EQUAL_OP, NOTEQUAL_OP, LESSTHAN_OP, LESSTHANEQUAL_OP, GREATERTHAN_OP, GREATERTHANEQUAL_OP, PLUSASSIGN_OP, MINUSASSIGN_OP, MULTASSIGN_OP, DIVASSIGN_OP, MODASSIGN_OP, KEYWORD_NOT, '*', '/', '%', '+', '-', KEYWORD_AND, KEYWORD_OR, ')', ':', ';', ']', ',']

    '('  shift, and go to state 48

    $default  reduce using rule 54 (expr)


State 30

   57 expr: NUMBER •

    $default  reduce using rule 57 (expr)


State 31

   55 expr: DECIMAL •
